--- a/thesis/tests.lyx
+++ b/thesis/tests.lyx
@@ -936,6 +936,18 @@ Lines of Code By Language [ohloh]
 Documentation Coverage
 \end_layout
 
+\begin_layout Standard
+
+\lang arabic_arabi
+مزية جديدة في الفانوس، أنقر ما تريد لتبحث من جديد!
+\end_layout
+
+\begin_layout Standard
+
+\series bold
+http://chiffra.blogspot.com/2012/06/blog-post.html
+\end_layout
+
 \begin_layout Section
 Usage Statistics
 \end_layout
