--- a/thesis/Remerciements.lyx
+++ b/thesis/Remerciements.lyx
@@ -136,8 +136,8 @@ Mr.
 \emph default
  
 \noun default
-for giving me the honor of thier supervising during that year and guiding
- me with advices,, et ses critique constructives and meaningful criticism.
+for giving me the honor of their supervising during that year and guiding
+ me with advices, and meaningful criticism.
 \end_layout
 
 \begin_layout Standard
