--- a/thesis/abstract.lyx
+++ b/thesis/abstract.lyx
@@ -110,7 +110,7 @@ Noble Quran is different of all documents that we have known.
 \begin_layout Standard
 The goal through this work is to propose a system for advanced research
  in all of the information contained in the Quran by considering the morphology
- of the Arabic language and the properties of the Quranic text.
+ of the Arabic language and the properties of the Qur'anic text.
  It should be based on modern methods of information retrieval for good
  stability and high speed search.
  It would be very useful for researchers and could be generalized to cover
@@ -216,18 +216,19 @@ Indexation/Recherche, Arabe, Coran, Recherche d'information, Moteurs de
  ومن هنا جاءت الحاجة إلى إيجاد طريقة لاستخراج هذه المعلومات.
  لا توجد أي وسيلة حالية فعالة باستثناء بعض المعاجم المطبوعة وبعض الأدوات
  التي تعتمد البحث البسيط التسلسلي بالعبارات النمطية.
- وبسبب هذا القيد ، يتوجب علينا إيجاد طرق جديدة للتفاعل.
+ وبسبب هذا القيد، يتوجب علينا إيجاد طرق جديدة للتفاعل.
 \end_layout
 
 \begin_layout Standard
 
 \lang arabic_arabi
 الهدف من خلال هذا العمل هو اقتراح نظام للبحث المتقدم في جميع المعلومات الواردة
- في القرآن الكريم، مع الأخذ في الاعتبار مورفولوجيا اللغة العربية وخصائص
+ في القرآن الكريم، مع الأخذ بعين الاعتبار مورفولوجيا اللغة العربية وخصائص
  النص القرآني.
  وينبغي الاستناد على الأساليب الحديثة في استرجاع المعلومات من أجل استقرار
- جيد وسرعةعالية في البحث.هذا العمل مفيد للباحثين ودارسي القرآن ويمكن أن يعمم
- ليشمل جميع المحتوى باللغة العربية.
+ جيد وسرعة عالية في البحث.
+ هذا العمل مفيد للباحثين ودارسي القرآن ويمكن أن يعمَّم ليشمل جميع المحتوى
+ باللغة العربية.
 \begin_inset Newline newline
 \end_inset
 
