--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -5,9 +5,19 @@
 @WEB{Whoosh,
   key = {Whoosh},
   link = {http://whoosh.ca},
-  title = {Le site web de la bibliothèque Whoosh},
+  title = {Official website of Whoosh  library},
   year = { 2010}
 }
+
+@WEB{Zekr,
+      key = {Zekr},
+      link = {http://zekr.org},
+      title = {Zekr project official website},
+      year = { 2012}
+     }
+
+
+
 
 @WEB{mbayan,
   key = {Midād lbayān},
