--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -95,23 +95,23 @@
   author = { Youssef Jabri},
   title = {The Arabi system - TEX writes in Arabic and Farsi},
   school = {Ecole Nationale des Sciences Appliquées,Oujda, Morocco},
-  type = {Thèse},
+  type = {Thesis},
 }
 
 
 @MASTERSTHESIS{ Amr08,
   author = {Karima Amrouche},
   title = {Passage à l'echelle en Recherche d'Information : Methode d-elagage pour la reduction de l'espace de recherche},
-  school = {Institut National de Formation en Informatique (I.N.I),Alger},
+  school = {Institut National de Formation en Informatique (I.N.I),Algiers},
   year = {2008},
-  type = {Thèse},
+  type = {Thesis},
 }
 @MASTERSTHESIS{ Dah06,
   author = {Fouad Dahak},
   title = {Indexation des documents semi-structures : Proposition d-une approche basee sur le fichier inverse et le Trie},
-  school = {Institut National de Formation en Informatique (I.N.I),Alger},
+  school = {Institut National de Formation en Informatique (I.N.I),Algiers},
   year = {2006},
-  type = {Thèse},
+  type = {Thesis},
 
 }
 @MASTERSTHESIS{ Mes08,
@@ -119,7 +119,7 @@
   title = {ANALYSE MORPHO-SYNTAXIQUE AUTOMATIQUE ET RECONNAISSANCE DES ENTITES NOMMEES EN ARABE STANDARD},
   school = {Université de Franche-Comté},
   year = {2008},
-  type = {Thèse},
+  type = {Thesis},
 
 }
 
@@ -127,9 +127,9 @@
 @MASTERSTHESIS{ Aba09,
   author = {Ali Abar and Mounir Boughanem},
   title = {La capitalisation du profil des experts du CENEAP sur la base de la classification des etudes},
-  school = {Institut National de Formation en Informatique (I.N.I),Alger},
+  school = {Institut National de Formation en Informatique (I.N.I),Algiers},
   year = {2009},
-  type = {Thèse},
+  type = {Thesis},
 
 }
 
@@ -138,7 +138,7 @@
   title = {L'indexation automatique},
   school = {Ecole Nationale Superieure des Sciences de l'Information et des Bibliotheques (ENSSIB)},
   year = {1997},
-  type = {Thèse},
+  type = {Thesis},
 }
 
 @MASTERSTHESIS{ ASSEM_MEROUANE,
@@ -155,7 +155,7 @@
   title = {Système d’analyse syntaxico-semantique du langage arabe},
   school = {université d’Oran, Es-sénia},
   year = {1992},
-  type = {Thèse},
+  type = {Thesis},
 }
 
 
@@ -164,7 +164,7 @@
   title = {Un modèle de mushaf électronique},
   school = {ESI},
   year = {2005},
-  type = {Memoire de magister },
+  type = {Magister thesis },
 
 }
 
@@ -173,7 +173,7 @@
   title = {Approche ontologique pour la modélisation sémantique, l'indexation et l'interrogation des documents Coraniques},
   school = {ESI},
   year = {2008},
-  type = {Memoire de magister },
+  type = {Magister thesis  },
 
 }
 @BOOK{Han98,
@@ -392,7 +392,7 @@ Ontologies },
   title = {Modele flexible pour la Recherche d'Information dans des corpus de documents semi-structures},
   school = {Universite Paul Sabatier, Toulouse, France},
   year = {2005},
-  type = {Thèse de doctorat},
+  type = {Thesis de doctorat},
 
 }
 
@@ -427,7 +427,7 @@ Ontologies },
   title = {Modelisation de la pertinence en recherche d'information : modèle conceptuel, formalisation et application},
   school = {Université Joseph Fourier},
   year = {1997},
-  type = {Thèse },
+  type = {Thesis },
 
 }
 
@@ -717,21 +717,21 @@ Ontologies },
 }
 
 @book{Sharaf04,
-  title={\begin{Arabic}\raggedleft ‫مصحف الصحابة في القراءات العشر المتواترة من طريق الشاطبية والدرة‬ \end{Arabic}},
+  title={\begin{Arabic}\raggedleft ‫مصحف-الصحابة-في-القراءات-العشر-المتواترة-من-طريق-الشاطبية-والدرة‬ \end{Arabic}},
   author={Jamal Ad-Deen Muhammad Sharaf},
   year={2004},
   publisher={ Dar As-Sahaba lil-Turath }
 }
 
 @book{Tayyar08,
-  title={\begin{Arabic}\raggedleft ‫المحرر في علوم القرآن الكريم ‬ \end{Arabic}},
+  title={\begin{Arabic}\raggedleft ‫المحرر-في-علوم-القرآن-الكريم ‬ \end{Arabic}},
   author={Musaid bin Sulaiman bin Naser Et-tayar},
   year={2008},
-  publisher={ \begin{Arabic}\raggedleft مركز الدراسات والعلوم القرآنية بمعهد الإمام الشاطبي \end{Arabic} }
+  publisher={ \begin{Arabic}\raggedleft مركز-الدراسات-والعلوم-القرآنية-بمعهد-الإمام-الشاطبي \end{Arabic} }
 }
 
 @book{Zerkashi,
-  title={\begin{Arabic}\raggedleft  ‫البرهان في علوم القرآن‬ \end{Arabic}},
+  title={\begin{Arabic}\raggedleft  ‫البرهان-في-علوم-القرآن‬ \end{Arabic}},
   author={Badreddine Mohammed bin Abdullah bin Bahader ez-zerkashi},
 }
 
