--- a/thesis/Conception.lyx
+++ b/thesis/Conception.lyx
@@ -799,6 +799,14 @@ include a categorization of ayahs on term of topic in a hierarchic manner.
 \end_layout
 
 \begin_layout Standard
+New Plan!
+\end_layout
+
+\begin_layout Standard
+
+\end_layout
+
+\begin_layout Standard
 Quranic WordByWord as a resource to resolve lot of prblems
 \end_layout
 
