Conception - new plan sections

--- a/thesis/Conception.lyx
+++ b/thesis/Conception.lyx
@@ -798,12 +798,56 @@ Classification on Topics:
 include a categorization of ayahs on term of topic in a hierarchic manner.
 \end_layout
 
-\begin_layout Standard
-New Plan!
+\begin_layout Section
+Full vocalized search engine
+\end_layout
+
+\begin_layout Section
+Othmani Script and Text processing
+\end_layout
+
+\begin_layout Section
+Modular Query Parser
+\end_layout
+
+\begin_layout Section
+Statistics Gathering System
+\end_layout
+
+\begin_layout Section
+Qur'anic and Linguistic resources manager
+\end_layout
+
+\begin_layout Section
+Toward a Semantic search engine
+\end_layout
+
+\begin_layout Section
+Conception of features
+\end_layout
+
+\begin_layout Subsection
+Linguistic Options
+\end_layout
+
+\begin_layout Subsection
+Qur'anic Options
+\end_layout
+
+\begin_layout Subsection
+Best view of results
+\end_layout
+
+\begin_layout Subsection
+Alternative entry methods
+\end_layout
+
+\begin_layout Subsection
+Suggestions
 \end_layout
 
 \begin_layout Standard
-
+New Plan!
 \end_layout
 
 \begin_layout Standard
